# lactation_curve_core

./: .env.example  .gitignore  .pre-commit-config.yaml  .secrets.baseline  CITATION.cff  README.md  justfile  main.py  pyproject.toml
.github/workflows/: api-tests.yml  bump-version.yml  cffconvert.yml  deploy.yml  docs.yml  publish.yml  pulumi-preview.yml  pytest.yml
apps/dashboard/: .env.local.example  eslint.config.mjs  package.json  tailwind.config.js  tsconfig.json
apps/dashboard/src/app/: globals.css  layout.tsx  page.tsx
apps/dashboard/src/app/(dashboard)/: layout.tsx
apps/dashboard/src/app/(dashboard)/models/: page.tsx
apps/dashboard/src/app/(dashboard)/models/components/: model-info.tsx  stat-card.tsx
apps/dashboard/src/app/(dashboard)/models/hooks/: use-characteristics.ts  use-comparison.ts  use-model-fit.ts
apps/dashboard/src/app/(dashboard)/playground/: page.tsx
apps/dashboard/src/app/providers/: root-provider.tsx
apps/dashboard/src/components/charts/: lactation-curve-chart.tsx
apps/dashboard/src/components/dashboard/: dashboard-shell.tsx  navigation.ts  sidebar.tsx
apps/dashboard/src/data/: example-lactations.ts  model-metadata.ts
apps/dashboard/src/lib/: api-client.ts  env.ts
apps/dashboard/src/types/: api.ts
apps/lactation_curves/: function_app.py  main.py  pyproject.toml  requirements.txt  schemas.py
apps/lactation_curves/tests/: conftest.py  test_api.py  test_characteristic.py  test_fit.py  test_health.py  test_predict.py  test_test_interval.py
apps/milkbot/: .funcignore  main.py  pyproject.toml
misc/agents/: tutorial.md
misc/users/: index.html  lactation_curve.html  search.js
misc/users/lactation_curve/: key_milkbot.html  lactation_curve_characteristics.html  lactation_curve_fitting.html  test_interval_method_icar.html  wilmink_correction_factors.html
notebooks/: api_tutorial.ipynb  lactationcurve_pip_tutorial.ipynb  test.ipynb
src/lactationcurve/: __init__.py  utils.py
src/lactationcurve/characteristics/: __init__.py  test_interval_method_cp.py
src/lactationcurve/fitting/: __init__.py  lactation_curve_fitting.py
src/lactationcurve/preprocessing/: __init__.py  validate_and_standardize.py
tests/: conftest.py
tests/lactationcurve/: test_best_predict.py  test_islc.py  test_lactation_curve_characteristics.py  test_lactation_curve_fitting.py  test_test_interval_method.py
tests/lactationcurve/test_data/: l2_anim2_herd654.csv  mr_test_file.csv
