[project]
name = "lactation-curve-core"
version = "0.1.0"
description = "Lactation curve core monorepo"
requires-python = ">= 3.12, < 3.13"
dependencies = ["lactationcurve>=0.1.0"]

[tool.uv.sources]
lactationcurve = { path = "packages/python/lactation", editable = true }

[dependency-groups]
dev = ["pytest>=8.0.0", "ruff>=0.1.0", "python-dotenv>=1.0.0", "lactationcurve"]

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I"]

[tool.pytest.ini_options]
pythonpath = ["packages/python/lactation/src"]
testpaths = ["tests"]
