[project]
name = "milkbot-app"
version = "0.1.0"
description = "FastAPI backend for MilkBot lactation curve predictions"
requires-python = ">= 3.12, < 3.13"
dependencies = [
    "azure-functions>=1.21.0",
    "fastapi>=0.115.0",
    "uvicorn>=0.34.0",
    "lactationcurve>=0.1.0",
]

[dependency-groups]
dev = ["ruff>=0.1.0", "basedpyright>=1.37.1", "pytest>=8.0.0", "httpx>=0.27.0"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["."]
